<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstImmersion</string>
    <string name="title_activity_main">Hello World Immersion</string>

    <string name="information">Information</string>
    <string name="title_activity_information">Information Activity</string>

    <string name="start_measuring">Start Measuring</string>
    <string name="title_activity_measuring">MeasuringActivity</string>

    <string name="joint1">Joint 1: \u0020</string>
    <string name="joint2">Joint 2: \u0020</string>
    <string name="joint3">Joint 3: \u0020</string>
    <string name="joint4">Joint 4: \u0020</string>
    <string name="joint5">Joint 5: \u0020</string>
    <string name="joint6">Joint 6: \u0020</string>
    <string name="joint7">Joint 7: \u0020</string>

    <string name="double_joint_trigger">Show 2 Joints</string>
    <string name="single_joint_trigger">Show Joint</string>
    <string name="joint_1_trigger">1</string>
    <string name="joint_2_trigger">2</string>
    <string name="joint_3_trigger">3</string>
    <string name="joint_4_trigger">4</string>
    <string name="joint_5_trigger">5</string>
    <string name="joint_6_trigger">6</string>
    <string name="joint_7_trigger">7</string>
    <string name="all_joints_trigger">Show All Joints</string>

    <string name="single_joint_title">Single Joint Display</string>
    <string name="example_joint_value">163.51</string>

    <string name="no_internet_connection">No Internet Connection</string>

    <string name="arduors">ARDUORS</string>
    <string name="splash_text_1">Tap two times to Start Measuring.</string>
    <string name="splash_text_2">See Information for help.</string>

</resources>
