<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/splash_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arduors"
        android:textSize = "36sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/splash_screen_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text_1"
        android:textSize = "26sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/splash_screen_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_text_2"
        android:textSize = "26sp"
        android:gravity="center_horizontal"/>

</LinearLayout>