<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/glass_card_body_height"
        android:layout_marginLeft="@dimen/glass_card_margin"
        android:layout_marginTop="@dimen/glass_card_margin"
        android:layout_marginRight="@dimen/glass_card_margin"
        tools:ignore="UselessLeaf"
        >

        <!-- Put your widgets inside this RelativeLayout. -->



        <ViewGroup
            android:id="@+id/joint_a"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@android:color/holo_blue_bright"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/joint_b">

            <TextView
                android:id="@+id/joint_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joint1"/>

            <TextView
                android:id="@+id/joint_a_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_joint_value"
                android:layout_below="@+id/joint_a"
                android:layout_alignParentStart="true" />
        </ViewGroup>

        <TextView
            android:id="@+id/joint_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joint2"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/view2" />


        <TextView
            android:id="@+id/joint_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joint3"
            android:layout_alignTop="@+id/view"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/joint_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joint4"
            android:layout_alignTop="@+id/view"
            android:layout_alignStart="@+id/view2" />





        <TextView
            android:id="@+id/joint_b_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_joint_value"
            android:layout_alignTop="@+id/joint_c_val"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/joint_c_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_joint_value"
            android:layout_alignBaseline="@+id/joint_d_val"
            android:layout_alignBottom="@+id/joint_d_val"
            android:layout_alignParentStart="true" />


        <TextView
            android:id="@+id/joint_d_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_joint_value"
            android:layout_below="@+id/joint_d"
            android:layout_alignStart="@+id/view2" />


        <View
            android:id = "@+id/view_b"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@android:color/holo_purple"
            />



        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"
            android:layout_centerHorizontal="true"
            android:id="@+id/view2" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:id="@+id/view" />



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="@dimen/glass_card_margin"
        android:layout_marginBottom="@dimen/glass_card_footer_margin"
        android:layout_marginRight="@dimen/glass_card_margin"
        android:orientation="horizontal"
        >

        <!-- The footer view will grow to fit as much content as possible while the
             timestamp view keeps a fixed width. If the footer text is too long, it
             will be ellipsized with a 40px margin between it and the timestamp. -->

        <TextView
            android:id="@+id/footer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/glass_card_margin"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

    </LinearLayout>

</FrameLayout>