<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
    >

<RelativeLayout
    android:id="@+id/body_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/glass_card_body_height"
    android:layout_marginLeft="@dimen/glass_card_margin"
    android:layout_marginTop="@dimen/glass_card_margin"
    android:layout_marginRight="@dimen/glass_card_margin"
    tools:ignore="UselessLeaf"
    >

    <!-- Put your widgets inside this RelativeLayout. -->
    <TextView
        android:id="@+id/joint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joint1"
        android:gravity="center_horizontal"
        android:textSize = "40dp"
        />

    <TextView
        android:id="@+id/joint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joint2"
        android:gravity="right"
        android:textSize = "40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/joint1val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_joint_value"
        android:gravity="center_horizontal"
        android:textSize = "22dp"
        android:layout_below="@+id/joint1"
        android:layout_alignStart="@+id/joint1" />

    <TextView
        android:id="@+id/joint2val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_joint_value"
        android:gravity="center_horizontal"
        android:textSize = "22dp"
        android:layout_alignTop="@+id/joint1val"
        android:layout_alignStart="@+id/joint2" />

    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@android:color/darker_gray"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

<LinearLayout
    android:id="@+id/footer_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|left"
    android:layout_marginLeft="@dimen/glass_card_margin"
    android:layout_marginBottom="@dimen/glass_card_footer_margin"
    android:layout_marginRight="@dimen/glass_card_margin"
    android:orientation="horizontal"
    >

    <!-- The footer view will grow to fit as much content as possible while the
         timestamp view keeps a fixed width. If the footer text is too long, it
         will be ellipsized with a 40px margin between it and the timestamp. -->

    <TextView
        android:id="@+id/footer"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/glass_card_margin"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

</LinearLayout>

</FrameLayout>